// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManagerResults allowHeaders renders component 1`] = `
<section>
  <p
    className="heading"
  >
    <span
      className="traitify--icon-fa"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"table-columns\\" class=\\"svg-inline--fa fa-table-columns fa-w-16\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M0 96C0 60.65 28.65 32 64 32H448C483.3 32 512 60.65 512 96V416C512 451.3 483.3 480 448 480H64C28.65 480 0 451.3 0 416V96zM64 416H224V160H64V416zM448 160H288V416H448V160z\\"></path></svg>",
        }
      }
    />
     
    recommendation_chart_heading, [object Object]
  </p>
  <p>
    recommendation_chart_description, [object Object]
  </p>
  <div
    className="mock"
  >
    Personality Recommendation Chart
  </div>
  <p
    className="heading"
  >
    <span
      className="traitify--icon-fa"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"table-cells-large\\" class=\\"svg-inline--fa fa-table-cells-large fa-w-16\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M448 32C483.3 32 512 60.65 512 96V416C512 451.3 483.3 480 448 480H64C28.65 480 0 451.3 0 416V96C0 60.65 28.65 32 64 32H448zM448 96H288V224H448V96zM448 288H288V416H448V288zM224 224V96H64V224H224zM64 416H224V288H64V416z\\"></path></svg>",
        }
      }
    />
     
    interview_guide_heading, [object Object]
  </p>
  <p>
    interview_guide_description, [object Object]
  </p>
  <div
    className="mock"
  >
    Guide
  </div>
</section>
`;

exports[`ManagerResults renders component 1`] = `
<section>
  <div
    className="mock"
  >
    Personality Recommendation Chart
  </div>
  <div
    className="mock"
  >
    Guide
  </div>
</section>
`;
